--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ uvicorn==0.22.0
 sqlalchemy==1.4.47
 python-dotenv==1.0.0
 jinja2==3.1.2
+passlib==1.7.4
+python-jose==3.3.0
+python-multipart==0.0.6
